--- a/product-detail-card/style.css
+++ b/product-detail-card/style.css
@@ -815,7 +815,7 @@ footer .bottom-footer .social-icons img {
     white-space: nowrap;
   }
   main {
-    padding: 30px 15px 100px 15px;
+    padding: 30px 0 100px 15px;
   }
   main .landing-bg {
     display: none;
@@ -833,6 +833,7 @@ footer .bottom-footer .social-icons img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-right: 15px;
   }
   main .card-view .card-view-img {
     -webkit-box-ordinal-group: 2;
@@ -912,6 +913,7 @@ footer .bottom-footer .social-icons img {
   main .card-stats-section {
     padding: 15px;
     margin-bottom: 30px;
+    margin-right: 15px;
   }
   main .card-stats-section .card-stats {
     -ms-flex-preferred-size: 100%;
@@ -931,7 +933,6 @@ footer .bottom-footer .social-icons img {
     display: -ms-flexbox;
     display: flex;
     background-color: #22262E;
-    width: 100%;
     color: white;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -945,6 +946,7 @@ footer .bottom-footer .social-icons img {
         -ms-flex-pack: justify;
             justify-content: space-between;
     padding: 15px;
+    margin-right: 15px;
   }
   main .card-lang {
     display: -webkit-box;
@@ -978,6 +980,7 @@ footer .bottom-footer .social-icons img {
         -ms-flex-pack: justify;
             justify-content: space-between;
     padding: 15px;
+    margin-right: 15px;
   }
   main .buy-section .buy-section-card--bg1 {
     background-color: #313439;
