--- a/product-detail-card/style.scss
+++ b/product-detail-card/style.scss
@@ -712,7 +712,7 @@ footer {
     }
 
     main {
-        padding: 30px 15px 100px 15px;
+        padding: 30px 0 100px 15px;
 
         .landing-bg {
             display: none;
@@ -729,6 +729,7 @@ footer {
 
         .card-view {
             flex-direction: column;
+            margin-right: 15px;
 
             .card-view-img {
                 order: 1;
@@ -813,6 +814,7 @@ footer {
         .card-stats-section {
             padding: 15px;
             margin-bottom: 30px;
+            margin-right: 15px;
 
             .card-stats {
                 flex-basis: 100%;
@@ -837,7 +839,6 @@ footer {
         .card-section__header {
             display: flex;
             background-color: $secondary-color;
-            width: 100%;
             color: white;
             align-items: center;
             font-family: 'Raleway';
@@ -847,6 +848,7 @@ footer {
             line-height: 16px;
             justify-content: space-between;
             padding: 15px;
+            margin-right: 15px;
         }
 
         .card-lang {
@@ -878,6 +880,7 @@ footer {
                 display: flex;
                 justify-content: space-between;
                 padding: 15px;
+                margin-right: 15px;
 
                 &--bg1 {
                     background-color: $tertiary-color;
